ALEXPROJ-T-11 Removed ExceptionHandler, FullDataOfCarResponse and AutoCatalogApi. Added some import edits.